--- a/01_basic_practice.ipynb
+++ b/01_basic_practice.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34da9f9a",
+   "metadata": {},
+   "source": [
+    "## Importing packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "989ca5cd",
@@ -9,6 +17,14 @@
    "source": [
     "import cv2\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ea0e48",
+   "metadata": {},
+   "source": [
+    "## Reading and displaying an image"
    ]
   },
   {
@@ -53,6 +69,14 @@
     "plt.axis('off')\n",
     "plt.title(\"Image\")\n",
     "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd0d931b",
+   "metadata": {},
+   "source": [
+    "## Image Conversion to Different Types"
    ]
   },
   {
