edge detection run code

--- a/01_basic_practice.ipynb
+++ b/01_basic_practice.ipynb
@@ -48,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aaab0be900>"
+       "<matplotlib.image.AxesImage at 0x1b9bd992510>"
       ]
      },
      "execution_count": 3,
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aaab234b90>"
+       "<matplotlib.image.AxesImage at 0x1b9bfc4c910>"
       ]
      },
      "execution_count": 4,
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aaad530f50>"
+       "<matplotlib.image.AxesImage at 0x1b9bfd08cd0>"
       ]
      },
      "execution_count": 5,
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aaad5cae90>"
+       "<matplotlib.image.AxesImage at 0x1b9bfd9ac10>"
       ]
      },
      "execution_count": 6,
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a5d21770",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "08e751b2",
    "metadata": {},
    "outputs": [
@@ -323,10 +323,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aab00f2e90>"
+       "<matplotlib.image.AxesImage at 0x1b9c01b7750>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aaae6a0690>"
+       "<matplotlib.image.AxesImage at 0x1b9c1234410>"
       ]
      },
      "execution_count": 9,
@@ -492,17 +492,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "b059d330",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2aab16c3ed0>"
+       "<matplotlib.image.AxesImage at 0x1b9c1419450>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
