minor code update

--- a/02_intermediate_practice_ocr.ipynb
+++ b/02_intermediate_practice_ocr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "0051a0d6",
    "metadata": {},
    "outputs": [],
@@ -38,24 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "66703b65",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retval 1 is: 120.0 and retval 2 is: 120.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2531ca6de50>"
+       "<matplotlib.image.AxesImage at 0x25320b15a90>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,10 +66,8 @@
    "source": [
     "image = cv2.imread('images/digits.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "T=120 #  threshold value\n",
-    "retval1, thresh1 = cv2.threshold(image, T, 255, cv2.THRESH_BINARY)\n",
-    "retval2, thresh2 = cv2.threshold(image, T, 255, cv2.THRESH_BINARY_INV)\n",
-    "\n",
-    "print(f\"Retval 1 is: {retval1} and retval 2 is: {retval2}\")\n",
+    "_, thresh1 = cv2.threshold(image, T, 255, cv2.THRESH_BINARY)\n",
+    "_, thresh2 = cv2.threshold(image, T, 255, cv2.THRESH_BINARY_INV)\n",
     "\n",
     "plt.figure(figsize=(16, 9))\n",
     "\n",
