--- a/02_intermediate_practice_ocr.ipynb
+++ b/02_intermediate_practice_ocr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "0051a0d6",
    "metadata": {},
    "outputs": [],
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "66703b65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x25323d4f750>"
+       "<matplotlib.image.AxesImage at 0x1c49dc18690>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "ed0d8b13",
    "metadata": {},
    "outputs": [
@@ -112,10 +112,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2532908f250>"
+       "<matplotlib.image.AxesImage at 0x1c4a1675d10>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "ea40729a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2532ca2df90>"
+       "<matplotlib.image.AxesImage at 0x1c49f2c8e10>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
